--- a/mailmap.toml
+++ b/mailmap.toml
@@ -18,8 +18,184 @@
 # broadcasts the email to all users of the mailing list.
 
 [[lists]]
-address = 'test@rustlang.com'
+# Convention/Education Committee
+address = 'convention@ifba.org'
 access_level = 'everyone'
 members = [
-  'acrichton@mozilla.com',
+  "kfbct58@aol.com",
+  "fnovak53@yahoo.com",
+  "lynnfao@juno.com",
+  "joewho4@aol.com",
+  "ahrensfire@comcast.net",
+  "bowersbsa117@gmail.com",
+  "firebfdw@mindspring.com",
+  "ladyfirefly_911@hotmail.com",
+  "vaughn97@hotmail.com",
+  "v.mokros@gmail.com",
+]
+
+[[lists]]
+# All officers, committee chairs, past president, and turnout (excludes subcommittee chairs)
+address = 'execboard@ifba.org'
+access_level = 'everyone'
+members = [
+  "steve.garnett@sympatico.ca",
+  "schaetzp@msn.com",
+  "thewignalls@sympatico.ca",
+  "renebougie@gmail.com",
+  "v.mokros@gmail.com",
+  "424-896wgb@verizon.net",
+  "firegerry@me.com",
+  "kfbct58@aol.com",
+  "joewho4@aol.com",
+  "fnovak53@yahoo.com",
+  "rick.short@box55.org",
+  "skfick1@aol.com",
+  "mrihcohen@aol.com",
+  "firebfdw@mindspring.com",
+  "ian.c.duke@gmail.com",
+  "stuart.nathan@maryland.gov",
+  "ahrensfire@comcast.net",
+  "indyturnout@gmail.com",
+]
+
+[[lists]]
+# Constitution & By-laws
+address = 'bylaws@ifba.org'
+access_level = 'everyone'
+members = [
+  "ahrensfire@comcast.net",
+  "bowersbsa117@gmail.com",
+  "kbrummett@suddenlink.net",
+  "m1968q@aol.com",
+  "mc41853@live.com",
+]
+
+[[lists]]
+# Fire Buff of the Year
+address = 'fboy@ifba.org'
+access_level = 'everyone'
+members = [
+  "stuart.nathan@maryland.gov",
+  "edmcm@yahoo.com",
+  "tbone1019@comcast.net",
+]
+
+[[lists]]
+address = 'finance@ifba.org'
+access_level = 'everyone'
+members = [
+  "firebfdw@mindspring.com",
+  "skfick1@aol.com",
+  "ladyfirefly_911@hotmail.com",
+]
+
+[[lists]]
+address = 'historical@ifba.org'
+access_level = 'everyone'
+members = [
+  "kbrummett@suddenlink.net",
+  "w.mokros@gmail.com",
+  "steve.garnett@sympatico.ca",
+]
+
+[[lists]]
+address = 'insurance@ifba.org'
+access_level = 'everyone'
+members = [
+  "schaetzp@msn.com",
+  "firebfdw@mindspring.com",
+  "DLS@preparednessllc.com",
+]
+
+[[lists]]
+# Information Technology
+address = 'it@ifba.org'
+access_level = 'everyone'
+members = [
+  "thomas.bilbrey@box55.org",
+  "cdaniels@signal51.com",
+  "auntconni@hotmail.com",
+  "w.mokros@gmail.com",
+  "ian.c.duke@gmail.com",
+]
+
+[[lists]]
+# Recruitment & Retention
+address = 'join@ifba.org'
+access_level = 'everyone'
+members = [
+  "joewho4@aol.com",
+  "424-896wgb@verizon.net",
+  "CHOliphant@gmail.com",
+  "firebfdw@mindspring.com",
+  "kfbct58@aol.com",
+]
+
+[[lists]]
+# Fire & Life Safety
+address = 'lifesafety@ifba.org'
+access_level = 'everyone'
+members = [
+  "firegerry@me.com",
+  "firebfdw@mindspring.com",
+  "DLS@preparednessllc.com",
+]
+
+[[lists]]
+# Past Presidents
+address = 'pastpresidents@ifba.org'
+access_level = 'everyone'
+members = [
+  "v.mokros@gmail.com",
+  "tmcfire@aol.com",
+  "schaetzp@msn.com",
+  "424-896wgb@verizon.net",
+  "stuart.nathan@maryland.gov",
+  "mrihcohen@aol.com",
+  "firegerry@me.com",
+]
+
+[[lists]]
+# CFSI / Publicity Chair
+address = 'publicity@ifba.org'
+access_level = 'everyone'
+members = [
+  "stuart.nathan@maryland.gov",
+  "maggiolv@gmail.com",
+]
+
+[[lists]]
+# All regional vice presidents
+address = 'regionalvps@ifba.org'
+access_level = 'everyone'
+members = [
+  "firebfdw@mindspring.com",
+  "fnovak53@yahoo.com",
+  "ian.c.duke@gmail.com",
+  "joewho4@aol.com",
+  "kfbct58@aol.com",
+  "mrihcohen@aol.com",
+  "rick.short@box55.org",
+  "skfick1@aol.com",
+  "thewignalls@sympatico.ca",
+  "tmcfire@aol.com",
+]
+
+[[lists]]
+# Resource Committee
+address = 'resource@ifba.org'
+access_level = 'everyone'
+members = [
+  "mrihcohen@aol.com",
+  "vaughn97@hotmail.com",
+  "stuart.nathan@maryland.gov",
+  "maggiolv@gmail.com",
+  "schaetzp@msn.com",
+  "indybuff1@sbcglobal.net",
+  "thewignalls@sympatico.ca",
+  "kbrummett@suddenlink.net",
+  "firebfdw@mindspring.com",
+  "w.mokros@gmail.com",
+  "DLS@preparednessllc.com",
 ]
