Add Karl to execboard

--- a/mailmap.toml
+++ b/mailmap.toml
@@ -51,6 +51,7 @@ members = [
   "stuart.nathan@maryland.gov",
   "ahrensfire@comcast.net",
   "indyturnout@gmail.com",
+  "kbrummett@suddenlink.net",
 ]
 
 [[lists]]
