Updates to constitution & bylaws committee

--- a/mailmap.toml
+++ b/mailmap.toml
@@ -60,7 +60,7 @@ address = 'bylaws@ifba.org'
 members = [
   "ahrensfire@comcast.net",
   "bowersbsa117@gmail.com",
-  "kbrummett@suddenlink.net",
+  "tmcfire@aol.com",
   "m1968q@aol.com",
   "mc41853@live.com",
 ]
