Update Jerry's email

--- a/mailmap.toml
+++ b/mailmap.toml
@@ -50,7 +50,8 @@ members = [
   "ian.c.duke@gmail.com",
   "stuart.nathan@maryland.gov",
   "ahrensfire@comcast.net",
-  "indyturnout@gmail.com",
+  "indyturnout@gmail.com", # Turn-Out Magazine
+  "indybuff1@gmail.com", # Turn-Out Magazine
   "kbrummett@suddenlink.net",
 ]
 
@@ -174,7 +175,7 @@ members = [
   "stuart.nathan@maryland.gov",
   "maggiolv@gmail.com",
   "schaetzp@msn.com",
-  "indybuff1@sbcglobal.net",
+  "indybuff1@gmail.com",
   "thewignalls@sympatico.ca",
   "kbrummett@suddenlink.net",
   "firebfdw@mindspring.com",
